Form header's look changed

--- a/src/Components/Generic/Forms/course.scss
+++ b/src/Components/Generic/Forms/course.scss
@@ -11,6 +11,22 @@ span {
   color: #a3a3a3;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+
+  span {
+    @extend %heading-1;
+  }
+  button {
+    border: 0px;
+    float: right;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
 .inp {
   font-family: Lato;
   font-style: normal;
