--- a/src/Components/Generic/Forms/assignment.scss
+++ b/src/Components/Generic/Forms/assignment.scss
@@ -15,6 +15,22 @@ h3 {
   @extend %heading-2;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+
+  span {
+    @extend %heading-1;
+  }
+  button {
+    border: 0px;
+    float: right;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
+
 .inp {
   font-family: Lato;
   font-style: normal;
@@ -72,8 +88,9 @@ h3 {
 .creditPoints {
   display: flex;
   flex-direction: row;
-  place-content: center;
-  place-items: center;
+  // place-content: center;
+  // place-items: center;
+  margin-bottom: 1rem;
 
   span {
     border: 1px solid #c6c6c6;
