--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -22,8 +22,11 @@ $Yellow-2: #fbbc05;
 $Yellow-3: #e2d245;
 $Yellow-10: #ff9c44;
 
-$Purple-1: #8322aa;
+$Purple-1: #270036;
 $Purple-1b: #6e1d8f;
+
+$Red-1: #830027;
+$Red-2: #a80939;
 
 $Black-1: #3f3e3e;
 
