--- a/src/Components/Plugins/Classroom/Base.scss
+++ b/src/Components/Plugins/Classroom/Base.scss
@@ -31,18 +31,15 @@
 .head {
   padding: 1rem 2rem 1rem 4rem;
 
-  @extend %font;
-  font-size: 32px;
-  line-height: 36px;
-
   span {
+    @extend %font;
+    font-size: 32px;
+    line-height: 36px;
     &:hover {
       cursor: pointer;
     }
   }
 }
-
-%{$fg[blue]%}%/%{$reset_color%} $(git_prompt_info)$(bzr_prompt_info)%{$fg[white]%}[%n@%m]%{$reset_color%} %{$fg[white]%}[%T]%{$reset_color%}
 
 .board {
   display: grid;
@@ -71,6 +68,16 @@
         width: 100%;
         height: 64px;
         background: #e9e9e9;
+        span {
+          font-family: Barlow;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 24px;
+          line-height: 34px;
+          /* identical to box height */
+
+          color: #3f3e3e;
+        }
       }
     }
     .activeMod {
