Working with single course list and lgCard for details

--- a/src/Components/Generic/Cards/LgCard/publishedCard.scss
+++ b/src/Components/Generic/Cards/LgCard/publishedCard.scss
@@ -1,7 +1,6 @@
-@import "../../../../static/styles/globals.scss";
+@import "../../../../../static/styles/globals.scss";
 
 .detailedCourse {
-  height: 570px;
   width: 105%;
   grid-column: 1 / -1;
   background: linear-gradient(205.1deg, #dd1374 0.56%, #ffd17f 101.17%);
