--- a/src/Components/Generic/Cards/CourseCard.scss
+++ b/src/Components/Generic/Cards/CourseCard.scss
@@ -6,6 +6,7 @@
 
   background: $White-0;
   border: 0px;
+  border-radius: 10px;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -23,9 +24,11 @@
 
   .title {
     // text-align: left;
+    padding: 0 1rem 0 1rem;
     span {
-      justify-self: center;
-      padding: 1rem;
+      // justify-self: center;
+      // padding: 1rem;
+
       font-family: Scope One;
       font-style: normal;
       font-weight: 500;
