--- a/src/Components/Generic/CourseList/courselist.scss
+++ b/src/Components/Generic/CourseList/courselist.scss
@@ -1,3 +1,5 @@
+@import "../../../../static/styles/globals.scss";
+
 .courseList {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(222px, auto));
@@ -12,22 +14,21 @@
 }
 
 .courseCard {
-  border: 1px solid #d6d6d6;
   box-sizing: border-box;
-  border-radius: 2px;
+  border-radius: 10px;
 
-  box-shadow: 5px 5px 50px rgba(0, 0, 0, 0.1);
+  box-shadow: $shadow-all-1;
 
   transition: transform 0.1s ease;
 
   &:hover {
     cursor: pointer;
     transform: scale(1.08);
-    box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.6);
   }
 }
 
 .active {
   transform: scale(1.08);
-  box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.3);
+  box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.6);
 }
