--- a/src/Components/Generic/Cards/CourseCard.scss
+++ b/src/Components/Generic/Cards/CourseCard.scss
@@ -6,12 +6,13 @@
 
   background: $White-0;
   border: 0px;
-  border-radius: 10px;
+  border-radius: 5px;
 
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 4fr 3fr 1.5fr 1.5fr;
   grid-gap: 5px;
+  box-shadow: $shadow-all-1;
 }
 
 .enrolled {
@@ -22,8 +23,8 @@
   grid-gap: 1rem;
   background: $White-0;
   border: 0px;
-  border-radius: 10px;
-
+  border-radius: 7px;
+  box-shadow: $shadow-all-2;
   .intro {
     padding: 1rem;
     width: auto;
