--- a/src/Components/Plugins/Courses/courses.scss
+++ b/src/Components/Plugins/Courses/courses.scss
@@ -1,17 +1,55 @@
+@import "../../../../static/styles/globals.scss";
+
 .courses {
   p {
     font-family: lato;
     font-size: 20px;
   }
 }
+.overlayBtn {
+  width: 100%;
+  height: 100px;
+  padding: 0 5% 0 5%;
+  // background: #21688a;
+
+  button {
+    float: right;
+    height: 48px;
+    border: 0px;
+    margin: 2rem;
+    border-radius: 5px;
+    span {
+      font-family: lato;
+      font-size: 20px;
+      padding: 2rem;
+      color: #ffffff;
+    }
+    background: #3880fd;
+    transition: 0.3s ease-in-out;
+
+    &:hover {
+      cursor: pointer;
+      box-shadow: $shadow-all-1;
+      background: #ffffff;
+      span {
+        color: #3880fd;
+      }
+      // border: 2px solid #3880fd;
+    }
+    &:focus {
+      outline: none;
+    }
+  }
+}
 
 .heading {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  grid-gap: 2rem;
+  display: flex;
+  // grid-template-columns: auto 1fr;
+  flex-direction: row;
+  // grid-gap: 2rem;
   align-content: center;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   justify-items: center;
 
   span {
@@ -26,6 +64,7 @@
 
   .searchBar {
     display: inline;
+    margin-right: 2rem;
 
     input {
       width: 700px;
@@ -50,7 +89,8 @@
 
       &:focus,
       &:hover {
-        border: 1px solid #181616;
+        border: 1px solid #616161;
+        outline: none;
       }
     }
 
@@ -69,6 +109,7 @@
       font-size: 20px;
       line-height: 24px;
       /* identical to box height */
+      transition: 0.2s ease-in-out;
 
       &:hover {
         cursor: pointer;
@@ -76,13 +117,23 @@
         border: 0px;
         background: #3880fd;
       }
+
+      &:focus {
+        outline: none;
+      }
     }
   }
 }
 
 .myCourses {
   padding: 2rem 5% 2rem 5%;
-  background-color: #fcf7f7;
+  background: $grad-12;
+
+  .heading {
+    span {
+      color: $White-0;
+    }
+  }
 }
 
 .catalog {
