--- a/src/Components/Generic/Footer/Footer.scss
+++ b/src/Components/Generic/Footer/Footer.scss
@@ -1,27 +1,106 @@
+@import "../../../../static/styles/globals.scss";
 .footer {
   width: 100%;
-  padding-left: 10%;
-  padding-right: 10%;
-  background: #1c1627;
-  height: 400px;
+  // padding: 2rem 10% 1rem 10%;
+  background: $Base-primary;
+  height: 300px;
   max-height: 600px;
-  padding-top: 2rem;
 
+  display: flex;
+  flex-direction: column;
+
+  hr {
+    color: black;
+    width: 2px;
+  }
+}
+
+.top {
+  height: 75%;
+  padding: 2rem 10% 1rem 10%;
+  background: $Base-secondary;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-content: center;
+
+  div {
+    display: flex;
+    flex-direction: column;
+
+    span {
+      margin: 0.5rem;
+      color: #d4d0ff;
+      border: 0px;
+
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 20px;
+      line-height: 24px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.bottom {
+  padding: 1rem 10% 1rem 10%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   .brandLogo {
-    button {
+    span {
       background: inherit;
+      // background: #4a3ebe;
       color: #ffffff;
       border: 0px;
 
-      font-family: Barlow;
+      font-family: Lato;
       font-style: normal;
-      font-weight: normal;
+      font-weight: 900;
       font-size: 48px;
       line-height: 55px;
 
       &:hover {
         cursor: pointer;
       }
+    }
+  }
+
+  .copywrite {
+    margin-left: 2rem;
+    span {
+      background: inherit;
+      // background: #4a3ebe;
+      color: #ffffff;
+      border: 0px;
+
+      font-family: Lato;
+      font-style: normal;
+      font-weight: 300;
+      font-size: 20px;
+      line-height: 24px;
+    }
+  }
+
+  .terms {
+    margin-left: 40%;
+    border: 1px solid $White-0;
+    border-radius: 5px;
+    padding: 1rem;
+    span {
+      background: inherit;
+      // background: #4a3ebe;
+      color: #ffffff;
+      border: 0px;
+
+      font-family: Lato;
+      font-style: normal;
+      font-weight: lighter;
+      font-size: 20px;
+      line-height: 24px;
     }
   }
 }
