--- a/src/Components/Generic/Navbar/navbar.scss
+++ b/src/Components/Generic/Navbar/navbar.scss
@@ -69,11 +69,17 @@
 
 .navLink {
   @extend %nav;
-
+  transition: 0.2s ease-in;
   &:hover {
     cursor: pointer;
-    background: #2b2b2b;
+    color: $Base-secondary;
+    background: #ffffff;
   }
+}
+
+.active {
+  color: $Base-secondary;
+  background: #ffffff;
 }
 
 .signIn {
