Added user menu to nav bar. 1. User pop up on click. 2. moved sign out here

--- a/src/Components/Generic/Navbar/navbar.scss
+++ b/src/Components/Generic/Navbar/navbar.scss
@@ -95,6 +95,21 @@
   }
 }
 
+.user {
+  @extend %nav;
+  transition: 0.2s ease-in;
+  padding-top: 5px;
+
+  &:hover {
+    cursor: pointer;
+    background: $Base-primary;
+  }
+}
+
+.user_active {
+  background: $Base-primary;
+}
+
 .signOut {
   @extend %nav;
   background: #f11b0c;
