--- a/src/Components/Generic/Navbar/userpopup.scss
+++ b/src/Components/Generic/Navbar/userpopup.scss
@@ -37,7 +37,7 @@ span {
   justify-content: center;
 
   .link {
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
     transition: 0.1s ease;
     &:hover {
       cursor: pointer;
@@ -52,12 +52,12 @@ span {
   .signOut {
     @extend %nav;
     margin-top: 1rem;
-    background: #ff0155;
+    background: #e02323;
     height: 36px;
     border-radius: 5px;
-
+    transition: 0.1s ease;
     &:hover {
-      background: #cf170a;
+      background: #770a0a;
       cursor: pointer;
     }
   }
