Created new platform page 1. Can create category 2. Can create tag

--- a/src/Components/Generic/Footer/Footer.scss
+++ b/src/Components/Generic/Footer/Footer.scss
@@ -18,26 +18,30 @@
   padding: 2rem 10% 1rem 10%;
   background: $Base-secondary;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: auto auto auto 1fr;
   align-content: center;
+  grid-gap: 10rem;
 
   div {
     display: flex;
     flex-direction: column;
 
-    span {
-      margin: 0.5rem;
+    .footer_links {
+      padding: 0.5rem 1rem 0.5rem 1rem;
       color: #d4d0ff;
       border: 0px;
+      width: auto;
 
       font-family: Lato;
       font-style: normal;
       font-weight: 300;
       font-size: 20px;
       line-height: 24px;
-
+      transition: 0.1s ease;
       &:hover {
         cursor: pointer;
+        background: $Base-primary;
+        border-radius: 5px;
       }
     }
   }
