Minor corrections in landing page

--- a/src/Components/Plugins/Index/Mentions/Mentions.scss
+++ b/src/Components/Plugins/Index/Mentions/Mentions.scss
@@ -1,7 +1,8 @@
 @import "../../../../../static/styles/globals.scss";
 
 .container {
-  padding: 5rem 8rem 6rem 8rem;
+  padding: 2rem 5% 2rem 5%;
+  border-bottom: 0.2px solid;
 
   span {
     padding-left: 4rem;
