--- a/src/Components/Generic/Footer/Footer.scss
+++ b/src/Components/Generic/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "../../../../static/styles/globals.scss";
 .footer {
   width: 100%;
-  height: 300px;
+  height: 320px;
   max-height: 600px;
 
   display: flex;
@@ -34,13 +34,14 @@
 
       font-family: Lato;
       font-style: normal;
-      font-weight: 300;
+      font-weight: 400;
       font-size: 20px;
       line-height: 24px;
       transition: 0.1s ease;
       &:hover {
         cursor: pointer;
         background: $Base-primary;
+        color: $White-0;
         border-radius: 5px;
       }
     }
@@ -92,7 +93,7 @@
     margin-left: 40%;
     border: 1px solid $White-0;
     border-radius: 5px;
-    padding: 1rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
     span {
       background: inherit;
       // background: #4a3ebe;
