--- a/src/Components/Plugins/Index/HeroCard/HeroCard.scss
+++ b/src/Components/Plugins/Index/HeroCard/HeroCard.scss
@@ -11,7 +11,7 @@
 
 .heroCard {
   background: $grad-card-1;
-  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: $shadow-all-3;
   border-radius: 20px;
   width: 100%;
   display: grid;
@@ -25,7 +25,7 @@
     text-align: center;
     font-family: Scope One;
     font-style: normal;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 64px;
     line-height: 89px;
 
@@ -43,17 +43,18 @@
   width: 280px;
   height: 60px;
 
-  border-radius: 2px;
+  border-radius: 5px;
   border: 0px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
 
   font-family: Barlow;
   font-style: normal;
-  font-weight: 500;
+  font-weight: normal;
   font-size: 24px;
   line-height: 29px;
   /* identical to box height */
   text-align: center;
+  transition: 0.2s ease;
 
   color: #ffffff;
 }
@@ -68,6 +69,9 @@
 
     &:hover {
       cursor: pointer;
+      background: white;
+      transform: scale(1.1);
+      color: $Blue-1;
     }
   }
 
@@ -78,6 +82,9 @@
 
     &:hover {
       cursor: pointer;
+      background: white;
+      transform: scale(1.1);
+      color: $Blue-2;
     }
   }
 }
