--- a/src/Components/Plugins/Index/TopCourses/TopCourses.scss
+++ b/src/Components/Plugins/Index/TopCourses/TopCourses.scss
@@ -1,7 +1,7 @@
 @import "../../../../../static/styles/globals.scss";
 
 .container {
-  padding: 3rem 8rem 0 8rem;
+  padding: 1rem 5% 0 5%;
 
   span {
     padding-left: 4rem;
@@ -11,7 +11,7 @@
     font-size: 48px;
     line-height: 66px;
 
-    color: $White-0;
+    color: $Black-1;
   }
 }
 
@@ -22,8 +22,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
-    align-items: center;
-    justify-items: center;
+    place-items: center;
+    place-content: center;
   }
 
   // This will contain the categories that will be shown next
@@ -31,65 +31,62 @@
   }
 
   .courseCards {
-    margin: 1.5rem 4rem 0 4rem;
+    margin: 1.5rem 3rem 0 3rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 2rem;
+    grid-gap: 1rem;
     align-items: center;
     justify-items: center;
   }
 
   %categoryBox {
-    width: 610px;
-    height: 270px;
-
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
-    border-radius: 20px 0px 20px 20px;
+    box-shadow: $shadow-1;
+    // border: 1px solid $White-3;
+    border-radius: 5px;
+    padding: 1rem;
+    background: $White-0;
 
     .options {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-
       button {
-        margin: 1.5rem 0 0 2.5rem;
-        width: 180px;
-        height: 60px;
+        margin-left: 2.5rem;
+        height: 56px;
+        padding: 0rem;
+
         background: transparent;
 
-        border: 2px solid #ffffff;
-        box-sizing: border-box;
-        border-radius: 10px;
+        border-bottom: 5px solid $Yellow-2;
+        // box-sizing: border-box;
+        // border-radius: 5px;
 
         font-family: Barlow;
         font-style: normal;
-        font-weight: 500;
+        font-weight: normal;
         font-size: 28px;
         line-height: 34px;
         /* identical to box height */
         text-align: center;
 
-        color: #ffffff;
+        color: $Black-1;
+        transition: 0.3s ease;
 
         &:hover {
           cursor: pointer;
+          padding: 0 2rem 0 0rem;
+          font-weight: bolder;
         }
-      }
 
-      img {
-        margin: 1rem 5rem 0 0;
-        justify-self: end;
-        // align-self: center;
+        @extend %no-focus;
       }
     }
   }
 
   .cat1 {
     @extend %categoryBox;
-    background: $grad-7;
+    background: $White-0;
   }
 
   .cat2 {
     @extend %categoryBox;
-    background: $grad-8;
+    background: $White-0;
   }
 }
