--- a/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
+++ b/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
@@ -8,9 +8,10 @@
   display: grid;
   grid-template-columns: 1fr auto;
   grid-gap: 3rem;
-
+  place-content: center;
+  justify-content: center;
   span {
-    padding-left: 4rem;
+    // padding-left: 1rem;
     font-family: Scope One;
     font-style: normal;
     font-weight: bolder;
@@ -25,38 +26,52 @@
     width: 100%;
     height: 370px;
 
-    background: $grad-2;
+    background: #ffffffe3;
+
     /* mild */
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
+    box-shadow: $shadow-1;
     border-radius: 10px;
   }
-  .introClip {
-    height: 320px;
-    width: 470px;
-    justify-self: right;
-  }
-  iframe {
-    height: 100%;
-    width: 100%;
-  }
 
-  button {
-    margin-top: 4.5rem;
-    align-self: end;
-    width: 470px;
-    height: 80px;
+  .secondary {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .introClip {
+      height: 320px;
+      width: 470px;
+      justify-self: right;
+      iframe {
+        height: 100%;
+        width: 100%;
+      }
+    }
 
-    background: $Blue-3;
-    border-radius: 2px;
-    border: 0px;
+    button {
+      align-self: center;
+      height: 64px;
+      padding: 0 4rem 0 4rem;
 
-    font-family: Barlow;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 34px;
-    text-align: center;
+      background: $Blue-3;
+      border-radius: 5px;
+      border: 0px;
+      box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
+      font-family: Barlow;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 34px;
+      text-align: center;
 
-    color: $White-0;
+      color: $White-0;
+      transition: 0.3s ease;
+      &:hover {
+        cursor: pointer;
+        // color: $Blue-3;
+        background: $Blue-3b;
+        box-shadow: $shadow-all-2;
+        transform: translateY(-10px);
+      }
+    }
   }
 }
