--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -13,30 +13,32 @@
   }
 
   .topCourses {
-    margin: 5rem 0 3rem 0;
+    margin: 3rem 0 1rem 0;
 
     height: 580px;
-    background: $Blue-10;
+    background: $White-2;
   }
 
   .partners {
-    position: absolute;
+    margin: 1rem 0 1rem 0;
     width: 100%;
-    z-index: -1;
+    padding-bottom: 1rem;
   }
 
   .testimonials {
-    margin: 5rem 2.5% 4rem 2.5%;
-    height: 510px;
+    margin: 2rem 2.5% 2rem 2.5%;
+    // height: 510px;
+    box-shadow: $shadow-all-3;
 
-    background: $grad-3;
+    background: $grad-6;
     border-radius: 10px;
+    padding-bottom: 1rem;
   }
 
   .mentions {
-    position: absolute;
+    // position: absolute;
+    background: $Blue-11;
     width: 100%;
-    z-index: -1;
     max-height: 500px;
   }
 }
