--- a/src/Components/Generic/CourseList/courselist.scss
+++ b/src/Components/Generic/CourseList/courselist.scss
@@ -22,16 +22,23 @@
   box-sizing: border-box;
   border-radius: 5px;
 
-  transition: transform 0.1s ease;
+  transition: transform 0.2s ease;
 
   &:hover {
     cursor: pointer;
-    transform: scale(1.08);
-    box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.6);
+    transform: translateY(-10px);
+    // top: -5px;
+    box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.3);
   }
 }
 
 .active {
   transform: scale(1.08);
   box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.6);
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.08);
+    // top: -5px;
+    box-shadow: 1px 20px 50px rgba(0, 0, 0, 0.6);
+  }
 }
