--- a/src/Components/Generic/Cards/AssignmentCard.scss
+++ b/src/Components/Generic/Cards/AssignmentCard.scss
@@ -4,7 +4,7 @@
   height: 160px;
   background: #ffffff;
 
-  padding: 1rem 2rem 1rem 2rem;
+  padding: 1rem;
 
   border-radius: 5px;
   border: 1px solid #dfdfdf;
@@ -12,10 +12,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  transition: transform 0.1s ease;
+  transition: transform 0.2s ease;
   &:hover {
     box-shadow: $shadow-2;
-    // transform: scale(1.05);
+    transform: translateY(-5px);
+    cursor: pointer;
   }
 
   span {
