--- a/src/Components/Generic/Cards/ModuleCard.scss
+++ b/src/Components/Generic/Cards/ModuleCard.scss
@@ -6,12 +6,12 @@
 
 .mdModuleCard {
   width: 500px;
-  height: 244px;
+  // height: 244px;
   background: $White-0;
   border: 1px solid $White-3;
   // box-sizing: border-box;
   border-radius: 5px;
-  padding: 1rem 2rem 1rem 2rem;
+  padding: 0rem 2rem 0rem 2rem;
 
   .title {
     font-family: Scope One;
@@ -23,7 +23,10 @@
     color: $Black-1;
   }
 
+  transition: 0.3s ease;
+
   &:hover {
+    transform: translateY(-5px);
     border: 1px solid #a5a5a5;
   }
 }
@@ -55,7 +58,7 @@
       margin-right: 1rem;
       font-family: Lato;
       font-style: normal;
-      font-weight: lighter;
+      font-weight: normal;
       font-size: 16px;
       line-height: 24px;
       /* identical to box height */
@@ -171,7 +174,7 @@
   width: 105%;
   padding: 1rem 2rem 1rem 2rem;
   grid-column: 1 / -1;
-  background: $grad-5;
+  background: $grad-12;
   border-radius: 10px;
 
   .head {
@@ -210,7 +213,7 @@
     color: #ffffff;
     font-family: Lato;
     font-style: normal;
-    font-weight: lighter;
+    font-weight: normal;
     font-size: 18px;
     line-height: 24px;
     padding-left: 2rem;
