--- a/src/Components/Plugins/Contribute/Draft/content.scss
+++ b/src/Components/Plugins/Contribute/Draft/content.scss
@@ -5,7 +5,7 @@
 .courseContent {
   // margin: 2rem 0 2rem 0;
   padding-top: 1rem;
-  background: #fffaf3;
+  // background: #fffaf3;
 
   .section {
     padding: 1rem 0 2rem 0;
