--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -52,11 +52,12 @@ $grad-9: linear-gradient(306.31deg, #ffd29d 7.11%, #e85f53 94.22%);
 $grad-10: linear-gradient(201.37deg, #2d2a75 14.13%, #13c5dd 101.15%);
 $grad-11: linear-gradient(205.61deg, #ff475d 0%, #ffb067 101.17%);
 $grad-12: linear-gradient(225.34deg, #270036 0%, #13c5dd 101.17%);
+$grad-13: linear-gradient(213.78deg, #ff7272 0%, #aa64ffe5 101.17%);
 
 $rgrad-1: radial-gradient(
   3876px at 100% 50%,
-  rgba(22, 214, 168, 0.25) 0%,
-  rgba(45, 156, 219, 0.84) 100%
+  rgba(4, 255, 196, 0.856) 0%,
+  rgb(0, 162, 255) 100%
 );
 
 // Shadow
