--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -1,7 +1,7 @@
 // Theme
 $Base-primary: #5143d3;
 $Base-primary-1: #2e229e;
-$Base-secondary: #100b41;
+$Base-secondary: #100c30;
 
 // Colors
 $White-0: #ffffff;
@@ -23,8 +23,8 @@ $Blue-11: #eff3fd;
 
 $Yellow-1: #ffe3b0;
 $Yellow-2: #fbbc05;
-$Yellow-3: #b2cf0d;
-$Yellow-3b: #5d6d05;
+$Yellow-3: #00b68e;
+$Yellow-3b: #007562;
 $Yellow-4: #ffefd2;
 $Yellow-9: #a17070;
 $Yellow-9b: #461e1e;
