--- a/src/Components/Generic/Cards/LgCard/draftcard.scss
+++ b/src/Components/Generic/Cards/LgCard/draftcard.scss
@@ -1,3 +1,5 @@
+@import "../../../../../static/styles/globals.scss";
+
 .head {
   display: flex;
   flex-direction: row;
@@ -5,18 +7,19 @@
   align-items: center;
 
   span {
-    font-family: Barlow;
+    font-family: Lato;
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
+    font-size: 28px;
     line-height: 38px;
     padding-bottom: 8px;
 
     color: #ffffff;
 
+    transition: 0.3s ease;
+
     &:hover {
       cursor: pointer;
-      transform: scale(1.05);
     }
   }
 
@@ -29,6 +32,8 @@
     box-shadow: none;
     border: 0px;
 
+    transition: 0.3s ease;
+
     &:hover {
       cursor: pointer;
       transform: scale(1.2);
@@ -40,9 +45,9 @@
 .draftedCourseCardLg {
   width: 105%;
   grid-column: 1 / -1;
-  background: linear-gradient(201.37deg, #2d2a75 14.13%, #13c5dd 101.15%);
+  background: $grad-8;
   border-radius: 10px;
-  padding: 2rem;
+  padding: 1rem 2rem 2rem 2rem;
 }
 
 .loader {
@@ -51,11 +56,11 @@
 
 .description {
   padding-left: 2rem;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   font-family: Lato;
   font-style: normal;
-  font-weight: lighter;
-  font-size: 20px;
+  font-weight: normal;
+  font-size: 16px;
   line-height: 24px;
   text-align: justify;
 
@@ -70,25 +75,28 @@
 
   .stat {
     width: 160px;
-    height: 64px;
+    padding: 0.5rem 0rem 0.5rem 0rem;
+    // height: 64px;
 
-    border: 1px solid #ececec;
+    // border: 1px solid #ececec;
+    border-radius: 5px;
+    background: #ffffffd3;
     box-sizing: border-box;
-    border-radius: 2px;
+    box-shadow: $shadow-1;
 
     text-align: center;
     justify-self: center;
 
     .value {
-      font-family: Barlow;
+      font-family: Lato;
       font-style: normal;
       font-weight: normal;
-      font-size: 24px;
+      font-size: 20px;
       line-height: 34px;
       /* identical to box height */
       text-align: center;
 
-      color: #ffffff;
+      color: $Black-1;
     }
 
     .label {
@@ -100,32 +108,25 @@
       /* identical to box height */
       text-align: center;
 
-      color: #ffffff;
+      color: $Black-1;
     }
   }
 }
 
-.tagBox {
-  width: 700px;
-  height: 71px;
-  margin: 2rem 0 0 1rem;
-  border: 1px solid #ececec;
-  box-sizing: border-box;
-  border-radius: 2px;
-}
-
 .actionBar {
-  margin-top: 2rem;
-  display: flex;
-  flex-direction: row-reverse;
+  // margin-top: 2rem;
+  margin: 2rem 2rem 0rem 0.5rem;
+  // display: flex;
+  // flex-direction: row-reverse;
+  // border: 1px solid #ececec;
+  // place-content: center;
 
   button {
     margin-left: 1rem;
     height: 60px;
     padding: 0 2rem 0 2rem;
 
-    background: #6253e6;
-    border-radius: 4px;
+    border-radius: 5px;
     border: 0px;
 
     display: flex;
@@ -137,52 +138,36 @@
       margin-right: 1.3rem;
       font-family: Barlow;
       font-style: normal;
-      font-weight: 500;
+      font-weight: bold;
       font-size: 20px;
       line-height: 29px;
       /* identical to box height */
 
       text-align: center;
 
-      color: #ffffff;
-    }
-
-    &:hover {
-      cursor: pointer;
-      background: #3b3199;
-    }
-  }
-
-  .publish {
-    background: #16d6a8;
-
-    &:hover {
-      cursor: pointer;
-      background: #098d6e;
-    }
-  }
-
-  .review {
-    background: #fb9700;
-    &:hover {
-      cursor: pointer;
-      background: #8d5e18;
-    }
-  }
-
-  .delete {
-    background: #ea4335;
-    &:hover {
-      cursor: pointer;
-      background: #a52d22;
+      color: $White-0;
     }
   }
 
   .modify {
-    background: #03a9f4;
+    float: right;
+    background: $Yellow-10;
+    transition: 0.5s ease;
     &:hover {
       cursor: pointer;
-      background: #015981;
+      transform: scale(1.1);
+      box-shadow: $shadow-all-2;
     }
+  }
+
+  .tagBox {
+    width: 700px;
+    height: 60px;
+    // margin: 2rem 0 0 0;
+    box-sizing: border-box;
+    border-radius: 2px;
+    background: #ffffffd3;
+    box-shadow: $shadow-1;
+    border-radius: 5px;
   }
 }
