fixed tagbox's look

--- a/src/Components/Plugins/Courses/detailed.scss
+++ b/src/Components/Plugins/Courses/detailed.scss
@@ -171,6 +171,7 @@
       background: $White-0;
       box-shadow: $shadow-all-1;
       border-radius: 5px;
+      padding: 1rem;
 
       .tag {
         padding: 0.3rem 1rem 0.3rem 1rem;
