--- a/src/Components/Plugins/Contribute/Draft/index.scss
+++ b/src/Components/Plugins/Contribute/Draft/index.scss
@@ -108,7 +108,7 @@
         align-items: center;
 
         span {
-          margin-right: 1rem;
+          margin-right: 0.2rem;
           font-family: Lato;
           font-style: normal;
           font-weight: normal;
@@ -145,7 +145,7 @@
         }
       }
 
-      .review {
+      .open_course {
         background: #fb9700;
 
         &:hover {
