--- a/src/Components/Generic/CourseList/courselist.scss
+++ b/src/Components/Generic/CourseList/courselist.scss
@@ -5,10 +5,10 @@
   grid-template-columns: repeat(auto-fill, minmax(222px, auto));
   grid-auto-flow: dense;
   margin-top: 3rem;
-  grid-column-gap: 1.5rem;
+  grid-column-gap: 2rem;
   grid-row-gap: 2rem;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   justify-items: center;
   align-content: center;
 }
